<resources>
    <string name="app_name">imagi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="merchant">Merchant</string>
    <string name="profile">Profile</string>


    <string name="sampleName">ANGGA PANDE</string>
    <string name="title_activity_list_market">ListMarket</string>
    <string name="market_name">Nama Pedagang</string>
    <string name="product">Produk</string>
    <string name="our_product">Produk Kami : </string>
    <string name="seeAll">Lihat Semua</string>
    <string name="give_feedback">Review</string>
    <string name="give">Kirim</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No place found, becouse location permission is disable</string>
    <string name="check_location">Cek Lokasi</string>
    <string name="market_location">Lokasi Toko</string>
    <string name="sampleNameRetail">Bu Endang</string>
    <string name="sampleAddressRetail">Lt. 2, No 6, Pasar Badung, Badung</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">"Search"</string>
    <string name="search_product">"Search Product"</string>
    <string name="title_activity_main__profile">Main_Profile</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="merchant_map">MerchantMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_review_list">Review</string>
    <string name="give_review">Berikan Ulasan</string>
    <string name="title_activity_store_merhcnat">store_merhcnat</string>
    <string name="title_activity_search_page">SearchPage</string>
</resources>