<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_market"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.market.DetailMarketFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:paddingBottom="24dp"
       android:layout_height="match_parent">
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:src="@drawable/market_2"
           android:scaleType="centerCrop"
           android:contentDescription="TODO" />

       <LinearLayout
           android:paddingHorizontal="16dp"
           android:layout_marginTop="16dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_height="wrap_content"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/market_name"
                   android:textFontWeight="16"
                   />

               <TextView
                   android:layout_marginTop="4dp"
                   android:layout_width="wrap_content"
                   android:textAlignment="textEnd"
                   android:layout_height="wrap_content"
                   android:text="@string/sampleNameRetail"
                   />
           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:orientation="vertical"
               android:layout_height="wrap_content"
               android:layout_weight="@integer/material_motion_duration_long_1"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAlignment="textEnd"
                   android:text="@string/market_location"
                   />

               <TextView
                   android:layout_marginTop="4dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAlignment="textEnd"
                   android:text="@string/sampleAddressRetail"
                   />
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:paddingHorizontal="16dp"
           android:layout_marginTop="24dp"
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:layout_height="wrap_content">
           <TextView
               android:layout_marginTop="4dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/product"
               />

           <TextView
               android:layout_marginTop="4dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/seeAll"
               android:textAlignment="textEnd"
               />
       </LinearLayout>
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/rvProduct"
               android:padding="10dp"
               android:overScrollMode="never"
               android:nestedScrollingEnabled="false"
               android:layout_width="match_parent"
               android:layout_height="match_parent"/>

       </androidx.constraintlayout.widget.ConstraintLayout>

       <Button
           android:paddingVertical="16dp"
           android:layout_marginHorizontal="24dp"
           android:layout_width="match_parent"
           android:text="@string/give_feedback"
           android:layout_height="wrap_content"/>

   </LinearLayout>

</ScrollView>